// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it add one row when clicking the add button 1`] = `
.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
  border-radius: 100%;
  height: 100%;
  border: none;
  font-size: 1.6rem;
  text-transform: uppercase;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 1rem !important;
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c27:hover {
  opacity: 0.8;
}

.c25 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: hsl(0,0%,74%);
  color: hsla(0,0%,100%);
  border-radius: 100%;
  height: 1.75rem;
  width: 1.75rem;
  border: none;
  font-size: 1.2rem;
  text-transform: uppercase;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.2rem !important;
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c25:hover {
  opacity: 0.8;
}

.c5 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c19 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c19::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c19::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c19:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c19::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c20 {
  font-size: 1.4rem;
  line-height: 14px;
}

.c20 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  font-size: 1.4rem;
  line-height: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c13:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c12 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c18 {
  color: hsla(0,79%,63%);
  margin-left: 0.5rem;
  display: inline-block;
}

.c4 {
  margin: 0.5rem 0 1rem 0;
}

.c6 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c6:checked + div label > span {
  left: calc(100% - 2px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.c9 {
  width: 80px;
  height: 40px;
  margin-top: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  background: white;
  border-radius: 80px;
  border: 2px solid hsla(0,0%,52%);
  position: relative;
  -webkit-transition: color background-color 0.5s;
  transition: color background-color 0.5s;
}

.c9 > p {
  color: hsla(0,0%,52%);
  padding: 0.5em;
  font-size: 0.8em;
  font-weight: 700;
  text-transform: uppercase;
}

.c9 > span {
  content: '';
  position: absolute;
  top: 1px;
  left: 2px;
  width: calc(40px - 6px);
  height: calc(40px - 6px);
  border-radius: calc(40px - 5px);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  background: hsla(0,0%,52%);
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.29);
}

.c9:active span {
  width: calc(40px + 10px);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  width: 100%;
  height: 12rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1rem;
  background: white;
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.5rem;
  color: hsla(0,0%,40%);
}

.c21 {
  width: 100%;
  margin: 0.5rem 0;
  font-size: 1.4rem;
}

.c22 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c22::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c22::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c22:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c22::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c10 {
  margin-bottom: 3rem;
  padding-bottom: 5rem;
  padding-right: 3rem;
  padding-left: 3rem;
  border: 1px solid hsl(0,0%,74%);
}

.c14 {
  margin-top: 2rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c16 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c1 {
  margin-bottom: 4rem;
}

.c23 {
  height: 4.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c26 {
  margin-top: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-right: 2.5rem;
  color: hsla(204,7%,15%);
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:768px) {
  .c15 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c3 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c3 {
    margin: 0;
  }
}

@media (max-width:1170px) {
  .c16 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c16 {
    margin: 0;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <label
              class="c5"
            >
              Essa tecnologia é vendida por você?
            </label>
            <input
              aria-hidden="false"
              class="c6"
              id="technologyCosts.is_seller"
              name="technologyCosts.is_seller"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                <label
                  class="c9"
                  for="technologyCosts.is_seller"
                >
                  <p>
                    common:no
                  </p>
                  <span />
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c7"
        >
          <div
            class="c11"
          >
            <h3>
              Custos de Implantação
            </h3>
            <span
              class="c12"
              name="help_button"
              tabindex="0"
            >
              <svg
                class="c13"
                fill="currentColor"
                height="1em"
                id="technologyCosts.costs.implementation_costs"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c14"
        >
          <div
            class="c15"
          >
            <input
              name="technologyCosts.costs.implementation_costs[0].id"
              type="hidden"
            />
            <div
              class="c16"
            >
              <div
                class="c17"
              >
                <label
                  class="c5"
                  for="technologyCosts.costs.implementation_costs[0].description"
                >
                  Descrição
                   
                  <span
                    aria-label="Indicador visual de campo obrigatório"
                    class="c18"
                  >
                    *
                  </span>
                </label>
                <div
                  class="c7"
                >
                  <input
                    aria-label="Descrição"
                    aria-required="true"
                    class="c19"
                    id="technologyCosts.costs.implementation_costs[0].description"
                    name="technologyCosts.costs.implementation_costs[0].description"
                    placeholder="Descrição"
                    type="text"
                  />
                </div>
              </div>
            </div>
            <div
              class="c3"
            >
              <div
                class="c20"
              >
                <label
                  class="c5"
                  for="technologyCosts.costs.implementation_costs[0].type"
                >
                  Tipo
                  <span
                    aria-label="Indicador visual de campo obrigatório"
                    class="c18"
                  >
                    *
                  </span>
                </label>
                <div
                  class="c7"
                >
                  <div
                    class="c21 react-select-container css-2b097c-container"
                    id="technologyCosts.costs.implementation_costs[0].type"
                  >
                    <div
                      class="react-select__control css-1b7oqde-control"
                    >
                      <div
                        class="react-select__value-container css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-1wa3eu0-placeholder"
                        >
                          Tipo
                        </div>
                        <div
                          class="css-b8ldur-Input"
                        >
                          <div
                            class="react-select__input"
                            style="display: inline-block;"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-label="Tipo"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              id="react-select-4-input"
                              spellcheck="false"
                              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="technologyCosts.costs.implementation_costs[0].type"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c3"
            >
              <div
                class="c17"
              >
                <label
                  class="c5"
                  for="technologyCosts.costs.implementation_costs[0].quantity"
                >
                  Quantidade
                   
                  <span
                    aria-label="Indicador visual de campo obrigatório"
                    class="c18"
                  >
                    *
                  </span>
                </label>
                <div
                  class="c7"
                >
                  <input
                    aria-label="Quantidade"
                    aria-required="true"
                    class="c19"
                    id="technologyCosts.costs.implementation_costs[0].quantity"
                    min="0"
                    name="technologyCosts.costs.implementation_costs[0].quantity"
                    placeholder="Quantidade"
                    type="number"
                  />
                </div>
              </div>
            </div>
            <div
              class="c3"
            >
              <div
                class="c20"
              >
                <label
                  class="c5"
                  for="technologyCosts.costs.implementation_costs[0].value"
                >
                  Valor
                   
                  <span
                    aria-label="Indicador visual de campo obrigatório"
                    class="c18"
                  >
                    *
                  </span>
                </label>
                <div
                  class="c7"
                >
                  <input
                    aria-label="Valor"
                    aria-required="true"
                    class="c22"
                    id="technologyCosts.costs.implementation_costs[0].value"
                    inputmode="numeric"
                    name="technologyCosts.costs.implementation_costs[0].value"
                    placeholder="Valor"
                    type="text"
                    value=""
                    variant="default"
                  />
                </div>
              </div>
            </div>
            <div
              class="c3"
            >
              <div
                class="c20"
              >
                <label
                  class="c5"
                  for="technologyCosts.costs.implementation_costs[0].measure_unit"
                >
                  Unidade de Medida
                  <span
                    aria-label="Indicador visual de campo obrigatório"
                    class="c18"
                  >
                    *
                  </span>
                </label>
                <div
                  class="c7"
                >
                  <div
                    class="c21 react-select-container css-2b097c-container"
                    id="technologyCosts.costs.implementation_costs[0].measure_unit"
                  >
                    <div
                      class="react-select__control css-1b7oqde-control"
                    >
                      <div
                        class="react-select__value-container css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__placeholder css-1wa3eu0-placeholder"
                        >
                          Unidade de Medida
                        </div>
                        <div
                          class="css-b8ldur-Input"
                        >
                          <div
                            class="react-select__input"
                            style="display: inline-block;"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-label="Unidade de Medida"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              id="react-select-5-input"
                              spellcheck="false"
                              style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                            <div
                              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="technologyCosts.costs.implementation_costs[0].measure_unit"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c3"
            >
              <div
                class="c23"
              >
                <div>
                  <span>
                    R$ 0,00
                  </span>
                </div>
              </div>
            </div>
            <div
              class="c24"
            >
              <button
                class="c25"
                color="hsla(0, 0%, 100%)"
                height="1.75"
                name="technologyCosts.costs.implementation_costs[0]_remove_button"
                title=""
                type="button"
                width="1.75"
              >
                <svg>
                  FaMinus mocked
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="c26"
        />
        <button
          class="c27"
          color="hsla(0, 0%, 100%)"
          name="technologyCosts.costs.implementation_costs_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
      <div
        class="c10"
      >
        <div
          class="c7"
        >
          <div
            class="c11"
          >
            <h3>
              Custos de Manutenção
            </h3>
            <span
              class="c12"
              name="help_button"
              tabindex="0"
            >
              <svg
                class="c13"
                fill="currentColor"
                height="1em"
                id="technologyCosts.costs.maintenance_costs"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c14"
        />
        <div
          class="c26"
        />
        <button
          class="c27"
          color="hsla(0, 0%, 100%)"
          name="technologyCosts.costs.maintenance_costs_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c20"
          >
            <label
              class="c5"
              for="technologyCosts.notes"
            >
              Observações
            </label>
            <div
              class="c7"
            >
              <textarea
                aria-label="Observações"
                class="c28"
                id="technologyCosts.notes"
                maxlength="1000"
                name="technologyCosts.notes"
              />
              <span
                class="c12"
                name="help_button"
                tabindex="0"
              >
                <svg
                  class="c13"
                  fill="currentColor"
                  height="1em"
                  id="technologyCosts.notes"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                  />
                </svg>
              </span>
            </div>
            
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <label
              class="c5"
            >
              Necessário financiamento para desenvolvimento da tecnologia?
            </label>
            <input
              aria-hidden="false"
              class="c6"
              id="technologyCosts.funding_required"
              name="technologyCosts.funding_required"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                <label
                  class="c9"
                  for="technologyCosts.funding_required"
                >
                  <p>
                    common:no
                  </p>
                  <span />
                </label>
                <span
                  class="c12"
                  name="help_button"
                  tabindex="0"
                >
                  <svg
                    class="c13"
                    fill="currentColor"
                    height="1em"
                    id="technologyCosts.funding_required"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 1024 1024"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      />
    </div>
  </form>
</div>
`;

exports[`it render the Costs page 1`] = `
.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
  border-radius: 100%;
  height: 100%;
  border: none;
  font-size: 1.6rem;
  text-transform: uppercase;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 1rem !important;
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c16:hover {
  opacity: 0.8;
}

.c5 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c17 {
  font-size: 1.4rem;
  line-height: 14px;
}

.c17 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c13:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c12 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c4 {
  margin: 0.5rem 0 1rem 0;
}

.c6 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c6:checked + div label > span {
  left: calc(100% - 2px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.c9 {
  width: 80px;
  height: 40px;
  margin-top: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  background: white;
  border-radius: 80px;
  border: 2px solid hsla(0,0%,52%);
  position: relative;
  -webkit-transition: color background-color 0.5s;
  transition: color background-color 0.5s;
}

.c9 > p {
  color: hsla(0,0%,52%);
  padding: 0.5em;
  font-size: 0.8em;
  font-weight: 700;
  text-transform: uppercase;
}

.c9 > span {
  content: '';
  position: absolute;
  top: 1px;
  left: 2px;
  width: calc(40px - 6px);
  height: calc(40px - 6px);
  border-radius: calc(40px - 5px);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  background: hsla(0,0%,52%);
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.29);
}

.c9:active span {
  width: calc(40px + 10px);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  width: 100%;
  height: 12rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1rem;
  background: white;
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.5rem;
  color: hsla(0,0%,40%);
}

.c10 {
  margin-bottom: 3rem;
  padding-bottom: 5rem;
  padding-right: 3rem;
  padding-left: 3rem;
  border: 1px solid hsl(0,0%,74%);
}

.c14 {
  margin-top: 2rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c1 {
  margin-bottom: 4rem;
}

.c15 {
  margin-top: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-right: 2.5rem;
  color: hsla(204,7%,15%);
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c3 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c3 {
    margin: 0;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <label
              class="c5"
            >
              Essa tecnologia é vendida por você?
            </label>
            <input
              aria-hidden="false"
              class="c6"
              id="technologyCosts.is_seller"
              name="technologyCosts.is_seller"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                <label
                  class="c9"
                  for="technologyCosts.is_seller"
                >
                  <p>
                    common:no
                  </p>
                  <span />
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c7"
        >
          <div
            class="c11"
          >
            <h3>
              Custos de Implantação
            </h3>
            <span
              class="c12"
              name="help_button"
              tabindex="0"
            >
              <svg
                class="c13"
                fill="currentColor"
                height="1em"
                id="technologyCosts.costs.implementation_costs"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c14"
        />
        <div
          class="c15"
        />
        <button
          class="c16"
          color="hsla(0, 0%, 100%)"
          name="technologyCosts.costs.implementation_costs_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
      <div
        class="c10"
      >
        <div
          class="c7"
        >
          <div
            class="c11"
          >
            <h3>
              Custos de Manutenção
            </h3>
            <span
              class="c12"
              name="help_button"
              tabindex="0"
            >
              <svg
                class="c13"
                fill="currentColor"
                height="1em"
                id="technologyCosts.costs.maintenance_costs"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c14"
        />
        <div
          class="c15"
        />
        <button
          class="c16"
          color="hsla(0, 0%, 100%)"
          name="technologyCosts.costs.maintenance_costs_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c17"
          >
            <label
              class="c5"
              for="technologyCosts.notes"
            >
              Observações
            </label>
            <div
              class="c7"
            >
              <textarea
                aria-label="Observações"
                class="c18"
                id="technologyCosts.notes"
                maxlength="1000"
                name="technologyCosts.notes"
              />
              <span
                class="c12"
                name="help_button"
                tabindex="0"
              >
                <svg
                  class="c13"
                  fill="currentColor"
                  height="1em"
                  id="technologyCosts.notes"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                  />
                </svg>
              </span>
            </div>
            
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <label
              class="c5"
            >
              Necessário financiamento para desenvolvimento da tecnologia?
            </label>
            <input
              aria-hidden="false"
              class="c6"
              id="technologyCosts.funding_required"
              name="technologyCosts.funding_required"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                <label
                  class="c9"
                  for="technologyCosts.funding_required"
                >
                  <p>
                    common:no
                  </p>
                  <span />
                </label>
                <span
                  class="c12"
                  name="help_button"
                  tabindex="0"
                >
                  <svg
                    class="c13"
                    fill="currentColor"
                    height="1em"
                    id="technologyCosts.funding_required"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 1024 1024"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      />
    </div>
  </form>
</div>
`;

exports[`it shows the funding fields when selecting funding as required 1`] = `
.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: hsla(195,86%,64%);
  color: hsla(0,0%,100%);
  border-radius: 100%;
  height: 100%;
  border: none;
  font-size: 1.6rem;
  text-transform: uppercase;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 1rem !important;
  float: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c16:hover {
  opacity: 0.8;
}

.c5 {
  color: hsla(0,0%,40%);
  font-size: 1.4rem;
  font-weight: 500;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c17 {
  font-size: 1.4rem;
  line-height: 14px;
}

.c17 > div.wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  width: 4rem;
  height: 4rem;
  margin: 0.6rem 0.5rem;
  fill: hsla(0,0%,80%);
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c13:hover {
  cursor: pointer;
  fill: hsla(0,0%,7%);
}

.c12 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c20 {
  color: hsla(0,79%,63%);
  margin-left: 0.5rem;
  display: inline-block;
}

.c4 {
  margin: 0.5rem 0 1rem 0;
}

.c6 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c6:checked + div label > span {
  left: calc(100% - 2px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.c9 {
  width: 80px;
  height: 40px;
  margin-top: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  cursor: pointer;
  background: white;
  border-radius: 80px;
  border: 2px solid hsla(0,0%,52%);
  position: relative;
  -webkit-transition: color background-color 0.5s;
  transition: color background-color 0.5s;
}

.c9 > p {
  color: hsla(0,0%,52%);
  padding: 0.5em;
  font-size: 0.8em;
  font-weight: 700;
  text-transform: uppercase;
}

.c9 > span {
  content: '';
  position: absolute;
  top: 1px;
  left: 2px;
  width: calc(40px - 6px);
  height: calc(40px - 6px);
  border-radius: calc(40px - 5px);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  background: hsla(0,0%,52%);
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.29);
}

.c9:active span {
  width: calc(40px + 10px);
}

.c19 {
  width: 80px;
  height: 40px;
  margin-top: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
  background: white;
  border-radius: 80px;
  border: 2px solid hsl(166,100%,34%);
  position: relative;
  -webkit-transition: color background-color 0.5s;
  transition: color background-color 0.5s;
}

.c19 > p {
  color: hsl(166,100%,34%);
  padding: 0.5em;
  font-size: 0.8em;
  font-weight: 700;
  text-transform: uppercase;
}

.c19 > span {
  content: '';
  position: absolute;
  top: 1px;
  left: 2px;
  width: calc(40px - 6px);
  height: calc(40px - 6px);
  border-radius: calc(40px - 5px);
  -webkit-transition: 0.2s;
  transition: 0.2s;
  background: hsl(166,100%,34%);
  box-shadow: 0 0 2px 0 rgba(10,10,10,0.29);
}

.c19:active span {
  width: calc(40px + 10px);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  width: 100%;
  height: 12rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1rem;
  background: white;
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.5rem;
  color: hsla(0,0%,40%);
}

.c21 {
  width: 100%;
  margin: 0.5rem 0;
  font-size: 1.4rem;
}

.c22 {
  width: 100%;
  height: 4.4rem;
  font-size: 1.4rem;
  margin: 0.5rem 0;
  padding: 1.2rem;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
  opacity: 1;
  background: hsla(0,0%,100%);
  border: 1px solid hsla(0,0%,80%);
  border-radius: 0.2rem;
  color: hsla(0,0%,40%);
}

.c22::-webkit-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c22::-moz-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c22:-ms-input-placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c22::placeholder {
  color: hsla(0,0%,52%);
  font-weight: 300;
  font-style: italic;
}

.c10 {
  margin-bottom: 3rem;
  padding-bottom: 5rem;
  padding-right: 3rem;
  padding-left: 3rem;
  border: 1px solid hsl(0,0%,74%);
}

.c14 {
  margin-top: 2rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  margin: 1rem auto;
  padding: 2rem 1rem;
  width: 100%;
}

.c0 button,
.c0 a {
  padding-right: 3rem;
  padding-left: 3rem;
}

.c0 > label {
  width: 100%;
  display: block;
  font-weight: 700;
  font-size: 1.7rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 0rem;
  margin-right: 0rem;
  margin-bottom: 1rem;
  margin-left: 0rem;
  background-color: transparent;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0 1rem 0 0;
  text-align: left;
}

.c1 {
  margin-bottom: 4rem;
}

.c15 {
  margin-top: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-right: 2.5rem;
  color: hsla(204,7%,15%);
}

@media (max-width:768px) {
  .c2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (max-width:1170px) {
  .c3 {
    max-width: initial;
    margin: 0 0 1rem 0;
  }
}

@media (max-width:768px) {
  .c3 {
    margin: 0;
  }
}

<div>
  <form
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <label
              class="c5"
            >
              Essa tecnologia é vendida por você?
            </label>
            <input
              aria-hidden="false"
              class="c6"
              id="technologyCosts.is_seller"
              name="technologyCosts.is_seller"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                <label
                  class="c9"
                  for="technologyCosts.is_seller"
                >
                  <p>
                    common:no
                  </p>
                  <span />
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c7"
        >
          <div
            class="c11"
          >
            <h3>
              Custos de Implantação
            </h3>
            <span
              class="c12"
              name="help_button"
              tabindex="0"
            >
              <svg
                class="c13"
                fill="currentColor"
                height="1em"
                id="technologyCosts.costs.implementation_costs"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c14"
        />
        <div
          class="c15"
        />
        <button
          class="c16"
          color="hsla(0, 0%, 100%)"
          name="technologyCosts.costs.implementation_costs_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
      <div
        class="c10"
      >
        <div
          class="c7"
        >
          <div
            class="c11"
          >
            <h3>
              Custos de Manutenção
            </h3>
            <span
              class="c12"
              name="help_button"
              tabindex="0"
            >
              <svg
                class="c13"
                fill="currentColor"
                height="1em"
                id="technologyCosts.costs.maintenance_costs"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c14"
        />
        <div
          class="c15"
        />
        <button
          class="c16"
          color="hsla(0, 0%, 100%)"
          name="technologyCosts.costs.maintenance_costs_add_button"
          title=""
          type="button"
        >
          <svg>
            FaPlus mocked
          </svg>
        </button>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c17"
          >
            <label
              class="c5"
              for="technologyCosts.notes"
            >
              Observações
            </label>
            <div
              class="c7"
            >
              <textarea
                aria-label="Observações"
                class="c18"
                id="technologyCosts.notes"
                maxlength="1000"
                name="technologyCosts.notes"
              />
              <span
                class="c12"
                name="help_button"
                tabindex="0"
              >
                <svg
                  class="c13"
                  fill="currentColor"
                  height="1em"
                  id="technologyCosts.notes"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                  />
                </svg>
              </span>
            </div>
            
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <label
              class="c5"
            >
              Necessário financiamento para desenvolvimento da tecnologia?
            </label>
            <input
              aria-hidden="false"
              class="c6"
              id="technologyCosts.funding_required"
              name="technologyCosts.funding_required"
              type="checkbox"
            />
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                <label
                  class="c19"
                  for="technologyCosts.funding_required"
                >
                  <p>
                    common:yes
                  </p>
                  <span />
                </label>
                <span
                  class="c12"
                  name="help_button"
                  tabindex="0"
                >
                  <svg
                    class="c13"
                    fill="currentColor"
                    height="1em"
                    id="technologyCosts.funding_required"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 1024 1024"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c17"
          >
            <label
              class="c5"
              for="technologyCosts.funding_type"
            >
              Tipo de Financiamento
              <span
                aria-label="Indicador visual de campo obrigatório"
                class="c20"
              >
                *
              </span>
            </label>
            <div
              class="c7"
            >
              <div
                class="c21 react-select-container css-2b097c-container"
                id="technologyCosts.funding_type"
              >
                <div
                  class="react-select__control css-1b7oqde-control"
                >
                  <div
                    class="react-select__value-container css-g1d714-ValueContainer"
                  >
                    <div
                      class="react-select__placeholder css-1wa3eu0-placeholder"
                    >
                      Selecione o tipo de financiamento
                    </div>
                    <div
                      class="css-b8ldur-Input"
                    >
                      <div
                        class="react-select__input"
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Tipo de Financiamento"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="react-select-2-input"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-6q0nyr-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="technologyCosts.funding_type"
                  type="hidden"
                  value=""
                />
              </div>
              <span
                class="c12"
                name="help_button"
                tabindex="0"
              >
                <svg
                  class="c13"
                  fill="currentColor"
                  height="1em"
                  id="technologyCosts.funding_type"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 1024 1024"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="c3"
        >
          <div
            class="c17"
          >
            <label
              class="c5"
              for="technologyCosts.funding_value"
            >
              Valor do Financiamento
               
              <span
                aria-label="Indicador visual de campo obrigatório"
                class="c20"
              >
                *
              </span>
            </label>
            <div
              class="c7"
            >
              <input
                aria-label="Valor do Financiamento"
                aria-required="true"
                class="c22"
                id="technologyCosts.funding_value"
                inputmode="numeric"
                name="technologyCosts.funding_value"
                placeholder="R$"
                type="text"
                value=""
                variant="default"
              />
            </div>
          </div>
        </div>
        <div
          class="c3"
        >
          <div
            class="c17"
          >
            <label
              class="c5"
              for="technologyCosts.funding_status"
            >
              Situação do Financiamento
            </label>
            <div
              class="c7"
            >
              <div
                class="c21 react-select-container css-2b097c-container"
                id="technologyCosts.funding_status"
              >
                <div
                  class="react-select__control css-1b7oqde-control"
                >
                  <div
                    class="react-select__value-container css-g1d714-ValueContainer"
                  >
                    <div
                      class="react-select__placeholder css-1wa3eu0-placeholder"
                    >
                      Selecione a situação do financiamento
                    </div>
                    <div
                      class="css-b8ldur-Input"
                    >
                      <div
                        class="react-select__input"
                        style="display: inline-block;"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Situação do Financiamento"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          id="react-select-3-input"
                          spellcheck="false"
                          style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-6q0nyr-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="technologyCosts.funding_status"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
